--- a/META.yml
+++ b/META.yml
@@ -5,12 +5,11 @@ author:
 build_requires:
   File::Find: 0
   File::Temp: 0
-  Module::Build: 0.3601
   Test::More: 0
 configure_requires:
-  Module::Build: 0.3601
+  ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.102342, CPAN::Meta::Converter version 2.102400'
+generated_by: 'Dist::Zilla version 4.102345, CPAN::Meta::Converter version 2.102400'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -26,7 +25,6 @@ requires:
   Dist::Zilla::Plugin::MetaConfig: 0
   Dist::Zilla::Plugin::MetaJSON: 0
   Dist::Zilla::Plugin::MetaResources: 0
-  Dist::Zilla::Plugin::ModuleBuild: 0
   Dist::Zilla::Plugin::NextRelease: 0
   Dist::Zilla::Plugin::PkgVersion: 0
   Dist::Zilla::Plugin::PodSyntaxTests: 0
@@ -39,65 +37,69 @@ requires:
 resources:
   homepage: http://padre.perlide.org
   repository: http://svn.perlide.org/padre/trunk/Dist-Zilla-PluginBundle-PadrePlugin/
-version: 0.07
+version: 0.08
 x_Dist_Zilla:
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
-      name: '@Filter/GatherDir'
-      version: 4.102342
+      name: '@Basic/GatherDir'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::PruneCruft
-      name: '@Filter/PruneCruft'
-      version: 4.102342
+      name: '@Basic/PruneCruft'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::ManifestSkip
-      name: '@Filter/ManifestSkip'
-      version: 4.102342
+      name: '@Basic/ManifestSkip'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::MetaYAML
-      name: '@Filter/MetaYAML'
-      version: 4.102342
+      name: '@Basic/MetaYAML'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::License
-      name: '@Filter/License'
-      version: 4.102342
+      name: '@Basic/License'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::Readme
-      name: '@Filter/Readme'
-      version: 4.102342
+      name: '@Basic/Readme'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::ExtraTests
-      name: '@Filter/ExtraTests'
-      version: 4.102342
+      name: '@Basic/ExtraTests'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::ExecDir
-      name: '@Filter/ExecDir'
-      version: 4.102342
+      name: '@Basic/ExecDir'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::ShareDir
-      name: '@Filter/ShareDir'
-      version: 4.102342
+      name: '@Basic/ShareDir'
+      version: 4.102345
+    -
+      class: Dist::Zilla::Plugin::MakeMaker
+      name: '@Basic/MakeMaker'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::Manifest
-      name: '@Filter/Manifest'
-      version: 4.102342
+      name: '@Basic/Manifest'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::TestRelease
-      name: '@Filter/TestRelease'
-      version: 4.102342
+      name: '@Basic/TestRelease'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
-      name: '@Filter/ConfirmRelease'
-      version: 4.102342
+      name: '@Basic/ConfirmRelease'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
-      name: '@Filter/UploadToCPAN'
-      version: 4.102342
+      name: '@Basic/UploadToCPAN'
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: AutoPrereqs
-      version: 4.102342
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::CheckChangeLog
       name: CheckChangeLog
@@ -121,49 +123,45 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: PkgVersion
-      version: 4.102342
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::MetaResources
       name: MetaResources
-      version: 4.102342
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: MetaConfig
-      version: 4.102342
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: MetaJSON
-      version: 4.102342
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: NextRelease
-      version: 4.102342
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: PodSyntaxTests
-      version: 4.102342
-    -
-      class: Dist::Zilla::Plugin::ModuleBuild
-      name: ModuleBuild
-      version: 4.102342
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.102342
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.102342
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.102342
+      version: 4.102345
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.102342
+      version: 4.102345
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.102342
+    version: 4.102345
