--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,10 @@
 name             = Dist-Zilla-PluginBundle-PadrePlugin
 author           = Ahmad M. Zawawi <ahmad.zawawi@gmail.com>
 license          = Perl_5
-version          = 0.07
+version          = 0.08
 copyright_holder = Ahmad M. Zawawi
 
-[@Filter]
-bundle = @Basic
-remove = MakeMaker
-
+[@Basic]
 [AutoPrereqs]
 [CheckChangeLog]
 [CheckChangesTests]
@@ -23,4 +20,3 @@ repository       = http://svn.perlide.org/padre/trunk/Dist-Zilla-PluginBundle-Pa
 [NextRelease]
 format = %-6v %{yyyy.MM.dd}d
 [PodSyntaxTests]
-[ModuleBuild]
